--- a/src/shared/components/loading/ui/Loading.scss
+++ b/src/shared/components/loading/ui/Loading.scss
@@ -3,6 +3,8 @@
   width: 100%;
   height: 100%;
   display: flex;
+  top: 0;
+  left: 0;
   align-items: center;
   justify-content: center;
   gap: 8px;
